--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -2,10 +2,29 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Frontend</title>
+  <title>Angular Jira Clone with Akita - by Syuq</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <meta name="title" content="Angular Jira Clone with Akita">
+  <meta name="description" content="A simplified Jira clone built with Angular 16 and Akita">
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://github.com/Syuq/">
+  <meta property="og:title" content="Angular Jira Clone with Akita">
+  <meta property="og:description" content="A simplified Jira clone built with Angular 16 and Akita">
+  <meta property="og:image" content="https://res.cloudinary.com/drpatrit3/image/upload/v1685428294/tat_xn9en8.png">
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://github.com/Syuq/">
+  <meta property="twitter:title" content="Angular Jira Clone with Akita">
+  <meta property="twitter:description" content="A simplified Jira clone built with Angular 16 and Akita">
+  <meta property="twitter:image" content="https://res.cloudinary.com/drpatrit3/image/upload/v1685428294/tat_xn9en8.png">
+  <link rel="image_src" href="/favicon.png" type="image/png">
+  <link rel="shortcut icon" href="/favicon.png" type="image/png">
+  <link rel="icon" href="/favicon.png" type="image/png">
+
 </head>
 <body>
   <app-root></app-root>
