✨ feat(frontend): Add sidebar and svg-icon. interface for project, issue, user and comment

--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -14,16 +14,15 @@
   <meta property="og:title" content="Angular Jira Clone with Akita">
   <meta property="og:description" content="A simplified Jira clone built with Angular 16 and Akita">
   <meta property="og:image" content="https://res.cloudinary.com/drpatrit3/image/upload/v1685428294/tat_xn9en8.png">
-
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
   <meta property="twitter:url" content="https://github.com/Syuq/">
   <meta property="twitter:title" content="Angular Jira Clone with Akita">
   <meta property="twitter:description" content="A simplified Jira clone built with Angular 16 and Akita">
   <meta property="twitter:image" content="https://res.cloudinary.com/drpatrit3/image/upload/v1685428294/tat_xn9en8.png">
-  <link rel="image_src" href="/favicon.png" type="image/png">
-  <link rel="shortcut icon" href="/favicon.png" type="image/png">
-  <link rel="icon" href="/favicon.png" type="image/png">
+  <link rel="image_src" href="favicon.png" type="image/png">
+  <link rel="shortcut icon" href="favicon.png" type="image/png">
+  <link rel="icon" href="favicon.png" type="image/png">
 
 </head>
 <body>
