--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -1,34 +1,53 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <!--
+  Project: Angular Jira clone
+  Author: Syuq (syuq@gmail.com)
+  Homepage: https://github.com/syuq/jira-angular-clone
+  -----
+  Last Modified: Monday, 29th June 2023 9:41:59 am
+  Modified By: Syuq (syuq@gmail.com>)
+  -----
+  Copyright 2023 Syuq
+  -->
   <meta charset="utf-8">
-  <title>Angular Jira Clone with Akita - by Syuq</title>
+  <title>Angular Jira Clone with Akita - by syuq</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="title" content="Angular Jira Clone with Akita">
-  <meta name="description" content="A simplified Jira clone built with Angular 16 and Akita">
+  <meta name="description" content="A simplified Jira clone built with Angular 9 and Akita">
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://github.com/Syuq/">
+  <meta property="og:url" content="https://jira.syuq.com/">
   <meta property="og:title" content="Angular Jira Clone with Akita">
-  <meta property="og:description" content="A simplified Jira clone built with Angular 16 and Akita">
-  <meta property="og:image" content="https://res.cloudinary.com/drpatrit3/image/upload/v1685428294/tat_xn9en8.png">
+  <meta property="og:description" content="A simplified Jira clone built with Angular 9 and Akita">
+  <meta property="og:image" content="assets/img/jira-clone-tech-stack.png">
+
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
-  <meta property="twitter:url" content="https://github.com/Syuq/">
+  <meta property="twitter:url" content="https://jira.syuq.com/">
   <meta property="twitter:title" content="Angular Jira Clone with Akita">
-  <meta property="twitter:description" content="A simplified Jira clone built with Angular 16 and Akita">
-  <meta property="twitter:image" content="https://res.cloudinary.com/drpatrit3/image/upload/v1685428294/tat_xn9en8.png">
+  <meta property="twitter:description" content="A simplified Jira clone built with Angular 9 and Akita">
+  <meta property="twitter:image" content="assets/img/jira-clone-tech-stack.png">
   <link rel="image_src" href="assets/favicon.png" type="image/png">
   <link rel="shortcut icon" href="assets/favicon.png" type="image/png">
   <link rel="icon" href="assets/favicon.png" type="image/png">
 
 </head>
 <body>
-  <app-root></app-root>
-  <script>
-    var gtag;
-  </script>
+  <app-root>
+    <div class="pre-bootstrapping-container">
+      <div class="ant-spin ant-spin-spinning ant-spin-lg pre-bootstrapping-spinner">
+        <span class="ant-spin-dot ant-spin-dot-spin">
+          <i class="ant-spin-dot-item"></i>
+          <i class="ant-spin-dot-item"></i>
+          <i class="ant-spin-dot-item"></i>
+          <i class="ant-spin-dot-item"></i>
+        </span>
+      </div>
+    </div>
+  </app-root>
 </body>
 </html>
