🎨 style(index.html): update title and description meta tags The title and description meta tags have been updated to reflect the new name of the project, "Quan ly du an with Akita". This improves the accuracy of the information displayed in search engine results and social media previews.

--- a/frontend/src/index.prod.html
+++ b/frontend/src/index.prod.html
@@ -1,34 +1,24 @@
 <!doctype html>
 <html lang="en">
-  <!--
-  Project: Angular Jira clone
-  Author: Syuq (syuq@gmail.com)
-  Homepage: https://github.com/syuq/jira-angular-clone
-  -----
-  Last Modified: Monday, 29th June 2023 9:41:59 am
-  Modified By: Syuq (syuq@gmail.com>)
-  -----
-  Copyright 2023 Syuq
-  -->
   <meta charset="utf-8">
-  <title>Angular Jira Clone with Akita - by syuq</title>
+  <title>Angular Quan ly du an with Akita - by Syuq</title>
   <base href="/">
   <meta name="viewport"
         content="width=device-width, initial-scale=1">
   <meta name="title"
-        content="Angular Jira Clone with Akita">
+        content="Angular Quan ly du an with Akita">
   <meta name="description"
-        content="A simplified Jira clone built with Angular 9 and Akita">
+        content="A simplified Quan ly du an built with Angular and Akita">
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type"
         content="website">
   <meta property="og:url"
-        content="https://jira.syuq.com/">
+        content="https://github.com/Syuq/jira-angular-clone">
   <meta property="og:title"
-        content="Angular Jira Clone with Akita">
+        content="Angular Quan ly du an with Akita">
   <meta property="og:description"
-        content="A simplified Jira clone built with Angular 9 and Akita">
+        content="A simplified Quan ly du an built with Angular and Akita">
   <meta property="og:image"
         content="assets/img/jira-clone-tech-stack.png">
 
@@ -36,11 +26,11 @@
   <meta property="twitter:card"
         content="summary_large_image">
   <meta property="twitter:url"
-        content="https://jira.syuq.com/">
+        content="https://github.com/Syuq/jira-angular-clone">
   <meta property="twitter:title"
-        content="Angular Jira Clone with Akita">
+        content="Angular Quan ly du an with Akita">
   <meta property="twitter:description"
-        content="A simplified Jira clone built with Angular 9 and Akita">
+        content="A simplified Quan ly du an built with Angular and Akita">
   <meta property="twitter:image"
         content="assets/img/jira-clone-tech-stack.png">
   <link rel="image_src"
