--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -1,35 +1,25 @@
 <!doctype html>
 <html lang="en">
 <head>
-  <!--
-  Project: Angular Jira clone
-  Author: Syuq (syuq@gmail.com)
-  Homepage: https://github.com/syuq/jira-angular-clone
-  -----
-  Last Modified: Monday, 29th June 2023 9:41:59 am
-  Modified By: Syuq (syuq@gmail.com>)
-  -----
-  Copyright 2023 Syuq
-  -->
   <meta charset="utf-8">
-  <title>Angular Jira Clone with Akita - by syuq</title>
+  <title>Quan ly du an with Akita - by Syuq</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="title" content="Angular Jira Clone with Akita">
-  <meta name="description" content="A simplified Jira clone built with Angular 9 and Akita">
+  <meta name="title" content="Angular Quan ly du an with Akita">
+  <meta name="description" content="A simplified Quan ly du an built with Angular and Akita">
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://jira.syuq.com/">
-  <meta property="og:title" content="Angular Jira Clone with Akita">
-  <meta property="og:description" content="A simplified Jira clone built with Angular 9 and Akita">
+  <meta property="og:url" content="https://github.com/Syuq/jira-angular-clone">
+  <meta property="og:title" content="Quan ly du an with Akita">
+  <meta property="og:description" content="A simplified Quan ly du an built with Angular and Akita">
   <meta property="og:image" content="assets/img/jira-clone-tech-stack.png">
 
   <!-- Twitter -->
   <meta property="twitter:card" content="summary_large_image">
-  <meta property="twitter:url" content="https://jira.syuq.com/">
-  <meta property="twitter:title" content="Angular Jira Clone with Akita">
-  <meta property="twitter:description" content="A simplified Jira clone built with Angular 9 and Akita">
+  <meta property="twitter:url" content="https://github.com/Syuq/jira-angular-clone">
+  <meta property="twitter:title" content="Angular Quan ly du an with Akita">
+  <meta property="twitter:description" content="A simplified Quan ly du an built with Angular and Akita">
   <meta property="twitter:image" content="assets/img/jira-clone-tech-stack.png">
   <link rel="image_src" href="assets/favicon.png" type="image/png">
   <link rel="shortcut icon" href="assets/favicon.png" type="image/png">
